# todos/main.go
@@ -42,6 +42,7 @@ func initRouter(environment env2.Environment, q *db.Queries) *gin.Engine {
 
 	todosController := controllers.NewTodosController(q)
 	safeR.POST("/todos", todosController.CreateTodo)
+	safeR.PUT("/todos/:id", todosController.UpdateTodo)
 
 	return r
 }
